--- a/back-end/Cargo.toml
+++ b/back-end/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+chrono = "0.4"
+dotenv = "0.15.0"
+once_cell = "1"
+sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
