--- a/back-end/Cargo.toml
+++ b/back-end/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+anyhow = "1"
 chrono = "0.4"
 dotenv = "0.15.0"
+env_logger = "0.9"
 once_cell = "1"
+serde = "1"
 sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
