--- a/back-end/Cargo.toml
+++ b/back-end/Cargo.toml
@@ -14,3 +14,4 @@ env_logger = "0.9"
 once_cell = "1"
 serde = "1"
 sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
+ulid = "1"
