--- a/back-end/Cargo.toml
+++ b/back-end/Cargo.toml
@@ -7,11 +7,18 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+actix-session = { version = "0.7", features = ["cookie-session"] }
 anyhow = "1"
 chrono = "0.4"
 dotenv = "0.15.0"
 env_logger = "0.9"
 once_cell = "1"
-serde = "1"
-sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
+serde = { version = "1", features = ["derive"] }
+sqlx = { version = "0.6", features = [
+  "runtime-tokio-rustls",
+  "mysql",
+  "chrono",
+] }
 ulid = "1"
+bcrypt = "0.13"
+log = "0.4"
