--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier '**/*.{js,jsx,ts,tsx}' --ignore-path .gitignore --write --cache"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.7",
@@ -21,8 +22,12 @@
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
     "typescript": "4.8.4"
   }
 }
