--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "antd": "^4.24.2",
+    "dayjs": "^1.11.6",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
