--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier '**/*.{js,jsx,ts,tsx}' --ignore-path .gitignore --write --cache"
+    "format": "prettier '**/*.{js,jsx,ts,tsx}' --ignore-path .gitignore --write --cache",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@emotion/react": "^11",
